...
  "donationDialog": "Hi, as you might know this app is free and open source. It means that you can use it for free and copy/edit the source code. The developer will not gain nothing for it. But if you also believe in this project and would like to see new features, please consider buying me a coffee.",
  "drawerLogo": "Drawer logo",
  "rateApp": "Rate the app",
  "repoGithub": "Open repo on GitHub",
  "contributeTranslating": "Contribute translating the app",
  "search": "Search",
  "clearAll": "Clear all",
  "calculator": "Calculator",
  "significantFigures": "Significant figures",
  "removeTrailingZeros": "Remove trailing zeros",
  "longPressAdvice": "Long press to move items",
  "back": "Back",
  "save": "Save",
...
  "chooseProperty": "Choose a property",
  "reorderProperty": "Reorder {property}",
  "@reorderProperty": {
    "placeholders": {
      "property": {
        "type": "String",
        "example": "Length"
      }
    }
  },
  "otherPlatforms": "Howmany.blog for other platforms",
  "sourceCode": "Source code",
  "undoClearAllMessage": "Cleared all. Do you want to undo it?",
...
  },
  "hiddenUnits": "Hidden units",
  "selectAll": "Select all",
  "unselectAll": "Unselect all",

  "length": "Length",
  "area": "Area",
  "volume": "Volume",
  "time": "Time",
  "temperature": "Temperature",
  "speed": "Speed",
  "siPrefixes": "SI Prefix",
  "mass": "Mass",
  "pressure": "Pressure",
  "energy": "Energy",
  "angles": "Angles",
  "currencies": "Currencies",
  "shoeSize": "Shoe size",
  "digitalData": "Digital data",
  "power": "Power",
  "density": "Density",
  "torque": "Torque",
  "force": "Force",
  "fuelConsumption": "Fuel consumption",
  "numeralSystems": "Numeral systems",

  "meters": "Meters",
  "centimeters": "Centimeters",
  "inches": "Inches",
  "feet": "Feet",
  "nauticalMiles": "Nautical miles",
  "yards": "Yards",
  "miles": "Miles",
  "millimeters": "Millimeters",
  "micrometers": "Micrometers",
  "nanometers": "Nanometers",
  "angstroms": "Ångström",
  "picometers": "Picometers",
  "kilometers": "Kilometers",
  "astronomicalUnits": "Astronomical Units",
  "lightYears": "Light-years",
  "parsec": "Parsec",
  "mils": "Mils",
  "feetUsSurvey": "Feet (US survey)",

...
