...
    final conversionOrderUnits =
        ref.watch(UnitsOrderNotifier.provider).value![widget.selectedProperty]!;
    final areAllSelected = unselectedUnits.isEmpty;

    return Scaffold(
      floatingActionButton: FloatingActionButton(
        key: const ValueKey('confirm'),
        tooltip: l10n.save,
        child: const Icon(Icons.check),
        onPressed: () {
          ref
              .read(HiddenUnitsNotifier.provider.notifier)
              .set(unselectedUnits, widget.selectedProperty);
...
